--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.18.0
+  conditional_builder: ^1.0.2
+  bloc: ^7.0.0
+  flutter_bloc: ^7.0.0
+
 
 
 dev_dependencies:
